Quick fix for navbar overlap (may need to revisit later)

--- a/capstone/src/Styles/Recipe.css
+++ b/capstone/src/Styles/Recipe.css
@@ -1,4 +1,5 @@
 #basic_recipe_info{
     margin-left: 1em;
     margin-right: 1em;
+    margin-bottom: 3em; /* this is a quick fix for the navbar overlapping issue that I will likey have to come back to later -J */
 }
